--- a/src/components/Login/style.css
+++ b/src/components/Login/style.css
@@ -1,6 +1,8 @@
 .login {
     background-color: white;
     padding: 1.5%;
+    width: 20%;
+    margin-left: 38.15%;
 }
 
 .loginTitle {
@@ -12,4 +14,13 @@
     margin: 10px;
     color: white;
     text-align: center;
+}
+
+a {
+    font-size: 60%;
+}
+
+
+.agree {
+    font-size: 60%;   
 }
